# LocalGrid

./: .gitignore  pyproject.toml
.github/workflows/: python-tests.yml
src/localgrid/: __init__.py  core.py  mappings.py  ollama_data.json
src/localgrid/data/: lmstudio_data.json  localgrid_cache.json  ollama_data.json
src/localgrid/tokenizers/dbrx/: vocab.json
tests/: test_integration.py  test_script.py  test_unit.py
