[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "localgrid"
version = "0.1.0"
authors = [
  { name="Alan Mackiewicz", email="alanmackiewicz03@gmail.com" },
]
description = "A library for inspecting local LLM providers and tokenizers."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tiktoken",
    "httpx",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

